--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^3.0.6",
     "vue-the-mask": "^0.11.1",
     "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
